# tokutoku

./: main.py  pyproject.toml  requirements.txt  rule.txt
template/: index.html  result.html  setting.html
