[tool.poetry]
name = "ingen"
version = "0.1.0"
description = ""
authors = ["fclef <fclef@fclef.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bottle = "^0.12.25"
jinja2 = "^3.1.2"
python-dotenv = "0.21.1"
backtrace = "^0.2.1"
openai = "^0.27.8"
frozenlist = "1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
